--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
-<h1>
-Rando Doony / Eddie Form
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Reviewers of the Toronto Restaurants</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    <h1>
+    Enter Reviewer Here
+    </h1>
+    <form>
+    <input type="text" placeholder="First name" name="first_name"><br/><br/>
+    <input type="text" placeholder="Last name" name="last_name"><br/></br>
+    <input type="text" placeholder="Email" name="email"><br/><br/>
+    <input type="text" placeholder="Phone Number" name="phone_number"><br/></br>
+    <input type="submit" value="OPEN THE CHEST">
+    </form>
+</html>
 
-<form>
-<input type="text"><br/><br/>
-<input type="text"><br/></br>
-<input type="submit">
-</form>
-</h1>
